<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ReceiptActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1" >
    <Button
        android:id="@+id/button_discharge_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_discharge_date"/>

    <Button
        android:id="@+id/button_receiving_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_receiving_date"/>
    </LinearLayout>

    <TextView
            android:id="@+id/text_view_supplier"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_supplier" />

    <Spinner
        android:id="@+id/spinner_suppliers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1000" >
        <ScrollView
            android:id="@+id/scrollViewReceiptMedicines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_alignParentLeft="true" >

            <RelativeLayout
                android:id="@+id/relativeLayoutReceiptMedicines"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/tableLayoutReceiptMedicines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"></TableLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="1" >

    <TextView
        android:id="@+id/text_view_medicine"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_medicine" />

    <Spinner
        android:id="@+id/spinner_medicines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/text_view_count"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_count" />

    <EditText
        android:id="@+id/edit_text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1" >
        <Button
            android:id="@+id/button_add_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_add_medicine"/>

        <Button
            android:id="@+id/button_delete_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_delete_medicine"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_save_text" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_cancel_text"/>

</LinearLayout>