<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MedicinesActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1000"
        >
        <ScrollView
            android:id="@+id/scrollViewMedicines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="100"
            android:layout_alignParentLeft="true" >

               <RelativeLayout
                    android:id="@+id/relativeLayoutMedicines"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:orientation="vertical" >

                    <TableLayout
                        android:id="@+id/tableLayoutMedicines"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" >
                    </TableLayout>
                </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_create_text"/>

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_update_text"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_delete_text"/>

    <Button
            android:id="@+id/button_back"
            android:text="@string/button_back_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1" />

</LinearLayout>